# cognex

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  install.ps1  install.sh  mcp.example.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
.kilo/plans/: 1775846694217-quick-eagle.md
.playwright-mcp/: page-2026-04-11T08-05-55-014Z.yml  page-2026-04-11T08-06-07-280Z.yml  page-2026-04-11T08-06-17-659Z.yml  page-2026-04-11T08-08-18-044Z.yml  page-2026-04-11T08-08-29-692Z.yml  page-2026-04-11T08-09-03-495Z.yml  page-2026-04-11T08-09-11-942Z.yml  page-2026-04-11T08-10-20-332Z.yml  page-2026-04-11T08-15-04-510Z.yml  page-2026-04-11T08-15-47-186Z.yml  page-2026-04-11T08-15-59-058Z.yml
demo/: run_demo.py  run_full_demo.py
docs/: configuration.md  examples.md  guides.md  tools.md
evaluate/: benchmark.py
examples/: basic_usage.py  session_workflow.py  teleport_example.py
src/substrate/: __init__.py  chp.py  extractor.py  ledger.py  migrations.py  models.py  patterns.py  retriever.py  store.py  substrate.py  swarm.py  teleport.py  trust.py  units.py
src/substrate_mcp/: __init__.py  context.py  installer.py  logger.py  sanitizer.py  server.py  types.py
src/substrate_mcp/tools/: __init__.py  chp_tools.py  core_tools.py  dispatcher.py  ledger_tools.py  memory_tools.py  pattern_tools.py  registry.py  swarm_tools.py  teleport_tools.py  trust_tools.py  unit_tools.py
tests/: conftest.py  stress_test.py  test_layers.py  test_mcp_server.py  test_substrate.py
tests/e2e/: conftest.py
tests/integration/: conftest.py
tests/integration/mcp/: test_mcp_core_tools.py  test_mcp_ledger_tools.py  test_mcp_memory_tools.py  test_mcp_server.py  test_mcp_tool_registry.py  test_mcp_trust_tools.py
tests/stress/: conftest.py  test_stress.py
tests/unit/: conftest.py
tests/unit/ledger/: test_ledger.py
tests/unit/patterns/: test_patterns.py
tests/unit/substrate/: test_extractor.py  test_retriever.py  test_store.py  test_substrate.py
tests/unit/swarm/: test_intent_compiler.py
tests/unit/teleport/: test_teleport.py
tests/unit/trust/: test_trust_engine.py
